# PaperVerifier

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Gemini-report-1.md  README.md  REVIEW_REPORT.md  claude-review-1.md  codex-review-1.md  codex-review-2.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: llm_config.yaml.example
docs/reviews-resolved/: 01-comprehensive-review.md  02-codex-review.md  03-codex-review.md  04-codex-review.md  05-codex-review-reliability.md  06-codex-review-enterprise.md  07-gemini-review.md  08-claude-review.md  09-enterprise-review-opus.md  10-gemini-report.md  12-gemini-report.md  README.md
paperverifier/: __init__.py  audit.py  cli.py  config.py  health.py  shutdown.py  tracing.py
paperverifier/agents/: __init__.py  base.py  claim_verification.py  hallucination_detection.py  language_flow.py  novelty_assessment.py  orchestrator.py  reference_verification.py  results_consistency.py  section_structure.py  writer.py
paperverifier/feedback/: __init__.py  applier.py  diff_generator.py
paperverifier/llm/: __init__.py  client.py  config_store.py  exceptions.py  providers.py  roles.py
paperverifier/models/: __init__.py  document.py  findings.py  report.py
paperverifier/parsers/: __init__.py  base.py  docx_parser.py  github_parser.py  latex_parser.py  markdown_parser.py  pdf_parser.py  router.py  text_parser.py  url_parser.py
paperverifier/security/: __init__.py  input_validator.py  sandbox.py
paperverifier/utils/: chunking.py  json_parser.py  prompts.py  text.py
streamlit_app/: app.py  auth.py  rate_limit.py  sanitize.py  utils.py
streamlit_app/pages/: 1_Upload.py  2_Review.py  3_Apply.py  4_Settings.py
tests/integration/: test_cli.py  test_enrichment.py  test_feedback_applier.py  test_orchestrator.py
tests/unit/: test_app_rate_limit.py  test_auth.py  test_chunking.py  test_config.py  test_input_validator.py  test_json_parser.py  test_llm_client.py  test_models.py  test_prompt_isolation.py  test_sandbox.py  test_url_parser_ssrf.py
